--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,3 +1,10 @@
-spring.application.name=backend
-spring.data.mongodb.uri=mongodb+srv://anasessadikine1:WebEmail@cluster0.mongodb.net/<database>?retryWrites=true&w=majority
-server.port=8080
+spring.application.name=gestion
+
+spring.datasource.url=jdbc:mysql://localhost:3306/gestion_residences
+spring.datasource.username=root
+spring.datasource.password=anass
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
