--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 logging.level.org.springframework=DEBUG
 logging.level.com.residence.gestion=DEBUG
+
+jwt.secret=mySuperSecretKey
+jwt.expiration=86400000 
