--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=gestion
 
-spring.datasource.url=jdbc:mysql://localhost:3306/gestion_residences
+spring.datasource.url=jdbc:mysql://localhost:3306/residences
 spring.datasource.username=root
 spring.datasource.password=anass
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
